[gd_scene load_steps=18 format=3 uid="uid://c6jmn72ykvsnn"]

[ext_resource type="Script" path="res://main.gd" id="1_5tjn1"]
[ext_resource type="Texture2D" uid="uid://ddq0mdwrjgmpq" path="res://mccauleyIdle.png" id="2_nt4nk"]
[ext_resource type="PackedScene" uid="uid://6ug1virlogpx" path="res://components/loading_bar.tscn" id="3_t72bo"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_u7sbs"]
[ext_resource type="Script" path="res://scripts/states/task_engaged_state.gd" id="4_5shgs"]
[ext_resource type="PackedScene" uid="uid://42xeh34lfqnf" path="res://components/scroll_container.tscn" id="4_ofh7n"]
[ext_resource type="Theme" uid="uid://1i27igjx7163" path="res://style/ui_1.tres" id="4_tiwoe"]
[ext_resource type="Script" path="res://scripts/states/task_management_state.gd" id="5_1xmwh"]
[ext_resource type="Script" path="res://scripts/task_label.gd" id="9_o2car"]
[ext_resource type="PackedScene" uid="uid://b7xr5136ph47c" path="res://menu_simple_1.tscn" id="9_ymyxe"]
[ext_resource type="Script" path="res://scripts/finish_button.gd" id="10_er4ly"]

[sub_resource type="AtlasTexture" id="AtlasTexture_im1sm"]
atlas = ExtResource("2_nt4nk")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_etfqm"]
atlas = ExtResource("2_nt4nk")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_puc47"]
atlas = ExtResource("2_nt4nk")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb5g6"]
atlas = ExtResource("2_nt4nk")
region = Rect2(30, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8irm"]
atlas = ExtResource("2_nt4nk")
region = Rect2(40, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_2oq7d"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_im1sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etfqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puc47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb5g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8irm")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5tjn1")

[node name="mccaulley" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(207, 337)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_2oq7d")
autoplay = "default"
frame_progress = 0.400697

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_u7sbs")

[node name="Task_Engaged" type="Node" parent="StateMachine"]
script = ExtResource("4_5shgs")

[node name="Task_Management" type="Node" parent="StateMachine"]
script = ExtResource("5_1xmwh")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" parent="Control" instance=ExtResource("4_ofh7n")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 181.0
offset_top = 210.0
offset_right = 965.0
offset_bottom = 419.0
grow_horizontal = 1
grow_vertical = 1
theme = ExtResource("4_tiwoe")

[node name="loading_bar" parent="Control" instance=ExtResource("3_t72bo")]
layout_mode = 0
offset_left = 175.0
offset_top = 370.0
offset_right = 333.0
offset_bottom = 375.0
scale = Vector2(5, 5)
value = 0.0

[node name="task_label" type="Label" parent="Control/loading_bar"]
texture_filter = 1
layout_mode = 1
offset_top = 2.20001
offset_right = 42.0
offset_bottom = 15.2
theme = ExtResource("4_tiwoe")
text = "Test"
script = ExtResource("9_o2car")

[node name="menu" parent="Control" instance=ExtResource("9_ymyxe")]
visible = false
layout_mode = 1
offset_left = 358.0
offset_top = 184.0
offset_right = 358.0
offset_bottom = 184.0

[node name="finish_button" type="Button" parent="Control"]
layout_mode = 1
offset_left = 390.0
offset_top = 421.0
offset_right = 732.0
offset_bottom = 470.0
theme = ExtResource("4_tiwoe")
text = "FINISH"
script = ExtResource("10_er4ly")

[connection signal="pressed" from="Control/finish_button" to="Control/finish_button" method="_on_pressed"]
